--- a/src/app/administrative/aktifitasuser/aktifitasuser.component.html
+++ b/src/app/administrative/aktifitasuser/aktifitasuser.component.html
@@ -9,35 +9,37 @@
           <!--panel 1-->
           <div class="card">
             <div class="card-body">
-              <table class="table table-borderless">
-                <tr>
-                  <td class="font-weight-bold">User Id </td>
-                  <td style="width: 5px;">:</td>
-                  <td><strong>Jateng SP</strong></td>
-                  <td style="width: 15%;"></td>
-                  <td class="font-weight-bold">Nama ROLE</td>
-                  <td style="width: 5px;">:</td>
-                  <td><strong>SUPER USER</strong></td>
-                </tr>
-                <tr>
-                  <td class="font-weight-bold">Nama</td>
-                  <td>:</td>
-                  <td><strong>Jateng SP</strong></td>
-                  <td></td>
-                  <td class="font-weight-bold">IP Address</td>
-                  <td>:</td>
-                  <td><strong>127.0.0.1</strong></td>
-                </tr>
-                <tr>
-                  <td class="font-weight-bold">Waktu Awal</td>
-                  <td>:</td>
-                  <td><strong>23-04-2015 09:33:54:31</strong></td>
-                  <td></td>
-                  <td class="font-weight-bold">Waktu Akhir</td>
-                  <td>:</td>
-                  <td><strong>23-04-2015 09:33:54:31</strong></td>
-                </tr>
-              </table>
+
+              <div class="form-group row">
+                <label class="col-2 col-form-label font-weight-bold">User Id</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label">Jateng SP</label>
+                <span class="col-1"></span>
+                <label class="col-2 col-form-label font-weight-bold">Nama Role</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label">Super User</label>
+              </div>
+
+              <div class="form-group row">
+                <label class="col-2 col-form-label font-weight-bold">Nama</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label">Jateng SP</label>
+                <span class="col-1"></span>
+                <label class="col-2 col-form-label font-weight-bold">Ip Address</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label">127.0.0.1</label>
+              </div>
+
+              <div class="form-group row">
+                <label class="col-2 col-form-label font-weight-bold">Waktu Awal</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label">2018/09/09 15:15:15.500</label>
+                <span class="col-1"></span>
+                <label class="col-2 col-form-label font-weight-bold">Waktu Akhir</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label">2018/19/19 15:15:15.500</label>
+              </div>
+
             </div>
           </div>
           <!--panel 1-->
@@ -95,30 +97,14 @@
                   </tr>
                 </tbody>
               </table>
+
+              <mat-paginator [length]="100" 
+                             [pageSize]="10" 
+                             [pageSizeOptions]="[5, 10, 25, 100]">
+              </mat-paginator>
             </div>
           </div>
           <!--panel 2-->
-          <!--Pagination-->
-          <div class="d-flex flex-row-reverse" style="margin-top: 15px;">
-            <nav aria-label="Page navigation example">
-              <ul class="pagination pg-blue">
-                <li class="page-item">
-                  <a class="page-link">
-                    <span>&laquo; Sebelumnya</span>
-                  </a>
-                </li>
-                <li class="page-item"><a class="page-link">1</a></li>
-                <li class="page-item"><a class="page-link">2</a></li>
-                <li class="page-item"><a class="page-link">3</a></li>
-                <li class="page-item">
-                  <a class="page-link">
-                    <span>&raquo; Selanjutnya</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <!--Pagination-->
 
           <br>
         </div>
