--- a/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
+++ b/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
@@ -9,33 +9,34 @@
           <!--panel 1-->
           <div class="card">
             <div class="card-body">
-              <table class="table table-borderless">
-                <tr>
-                  <td class="font-weight-bold">User Id </td>
-                  <td style="width: 5px;">:</td>
-                  <td><strong>Jateng SP</strong></td>
-                  <td style="width: 15%;"></td>
-                  <td class="font-weight-bold">Kode Bank</td>
-                  <td style="width: 5px;">:</td>
-                  <td><strong>Bank Jateng</strong></td>
-                </tr>
-                <tr>
-                  <td class="font-weight-bold">Nama</td>
-                  <td>:</td>
-                  <td><strong>Jateng SP</strong></td>
-                  <td></td>
-                  <td class="font-weight-bold">Kode Cabang</td>
-                  <td>:</td>
-                  <td><strong>034 - Cabang Utama</strong></td>
-                </tr>
-                <tr>
-                  <td colspan="3"></td>
-                  <td></td>
-                  <td class="font-weight-bold">Kode Departemen</td>
-                  <td>:</td>
-                  <td><strong>DC - Data Center</strong></td>
-                </tr>
-              </table>
+
+              <div class="form-group row">
+                <label class="col-2 col-form-label font-weight-bold">User Id</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label">Jateng SP</label>
+                <span class="col-1"></span>
+                <label class="col-2 col-form-label font-weight-bold">Kode Bank</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label">Jateng SP</label>
+              </div>
+
+              <div class="form-group row">
+                  <label class="col-2 col-form-label font-weight-bold">Nama</label>
+                  <label class="col-form-label pr-0  font-weight-bold">:</label>
+                  <label class="col-2 col-form-label">Jateng SP</label>
+                  <span class="col-1"></span>
+                  <label class="col-2 col-form-label font-weight-bold">Kode Cabang</label>
+                  <label class="col-form-label pr-0  font-weight-bold">:</label>
+                  <label class="col-2 col-form-label">034 - Cabang Utama</label>
+                </div>
+ 
+                <div class="form-group row">
+                    <span class="col-5"></span>
+                    <label class="col-2 col-form-label font-weight-bold">Kode Departemen</label>
+                    <label class="col-form-label pr-0  font-weight-bold">:</label>
+                    <label class="col-2 col-form-label">DC - Data Center</label>
+                  </div>
+
             </div>
           </div>
           <!--panel 1-->
