--- a/src/app/administrative/tanggalbisnis/tanggalbisnis.component.html
+++ b/src/app/administrative/tanggalbisnis/tanggalbisnis.component.html
@@ -10,41 +10,44 @@
           <!--panel 1-->
           <div class="card">
             <div class="card-body">
-              <table class="table table-bordered btn-sm">
-                <tr>
-                  <td class="font-weight-bold align-middle" style="width: 250px;">
-                    Tanggal Bisnis Sekarang
-                  </td>
-                  <td class="font-weight-normal align-middle" style="width: 5px;">:</td>
-                  <td class="font-weight-normal align-middle" style="width: 400px;">
-                    <div class="input-group mb-3">
-                      <div class="input-group align-middle">
-                        <input type="text" class="form-control">
-                        <div class="input-group-append" id="button-addon4">
-                          <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Ubah</button>
-                        </div>
-                      </div>
-                    </div>
-                  </td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td class="font-weight-bold align-middle">
-                    Buka Cabang Manual
-                  </td>
-                  <td class="font-weight-normal align-middle">:</td>
-                  <td class="font-weight-normal align-middle">
-                    <div class="md-form input-group mb-3">
-                      <input type="text" class="form-control" value="21/12/2012" style="width: 100px;">
-                      <div class="input-group-append">
-                        <button mdbBtn color="default" size="md" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Buka</button>
-                      </div>
-                    </div>
 
-                  </td>
-                  <td>
-                </tr>
-              </table>
+              <form [formGroup]="validatingForm">
+
+                <div class="form-group row">
+                  <label class="col-2 col-form-label font-weight-bold">Tanggal Bisnis Sekarang</label>
+                  <label class="col-form-label pr-0  font-weight-bold">:</label>
+                  <div class="col-3">
+                    <div class="input-group">
+                      <input class="form-control" mdbValidate formControlName="inputTanggal" [matDatepicker]="picker"
+                        id="inputTanggal" placeholder="Tanggal Valuta">
+                      <mat-datepicker #picker></mat-datepicker>
+                      <div class="input-group-append">
+                        <!-- <button mdbBtn color="default" size="md" class="m-0 px-3 py-2" type="button" (click)="picker.open()"><i class="fa fa-calendar"></i></button> -->
+                        <button mdbBtn color="primary" size="md" class="m-0 px-3 py-2" type="button" id="button-addon2" mdbWavesEffect (click)="picker.open()"><i class="fa fa-calendar"></i></button>
+                        <button mdbBtn color="primary" size="md" class="m-0 px-3 py-2" type="button" id="button-addon2" mdbWavesEffect >Ubah</button>
+                      </div>
+                    </div>
+                  </div>
+                  <p class="col-6 text-danger" *ngIf="inputTanggal.invalid && (inputTanggal.dirty || inputTanggal.touched)">Mohon
+                    Mohon Inputkan Tanggal
+                  </p>
+                </div>
+
+
+                <div class="form-group row">
+                  <label class="col-2 col-form-label font-weight-bold">Tanggal Bisnis Sekarang</label>
+                  <label class="col-form-label pr-0  font-weight-bold">:</label>
+                  <div class="col-3">
+                    <div class="input-group mb-3">
+                        <input class="form-control" value="{{tanggal | date:'dd/MM/yyyy'}}" id="inputTanggalManual" disabled>
+                      <div class="input-group-append">
+                        <button mdbBtn color="primary" size="md" class="m-0 px-3 py-2" type="button" id="button-addon2" mdbWavesEffect>Buka</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </form>
             </div>
           </div>
           <!--panel 1  -->
