--- a/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
@@ -10,7 +10,7 @@
 
               <div class="row justify-content-center">
                 <div class="col d-flex align-content-center">
-                  <mat-list class="justify-content-center">
+                  <mat-list>
                     <mat-list-item *ngFor="let el of elements" scope="col" style="font-weight: bold;">Nama Nasabah :
                       <div>{{el.namaNasabah}} </div>
                     </mat-list-item>
