--- a/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
+++ b/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
@@ -30,10 +30,10 @@
                     <td><input type="text" class="form-control form-control-sm" style="width: 250px;"></td>
                   </tr>
                 </table>
-
+                <hr>
                 <div class="d-flex justify-content-center">
-                  <button type="button" class="btn btn-primary btn-rounded">Cari</button>
-                  <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
+                  <button type="button" class="btn btn-primary btn-rounded"><i class="fa fa-search" aria-hidden="true"></i> Cari</button>
+                  <button type="button" class="btn btn-primary btn-rounded"><i class="fa fa-reply" aria-hidden="true"></i> Kembali</button>
                 </div>
               </form>
             </div>
