--- a/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
+++ b/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
@@ -32,17 +32,15 @@
                 </table>
                 <hr>
                 <div class="d-flex justify-content-center">
-                  <button type="button" class="btn btn-primary btn-rounded"><i class="fa fa-search" aria-hidden="true"></i> Cari</button>
-                  <button type="button" class="btn btn-primary btn-rounded"><i class="fa fa-reply" aria-hidden="true"></i> Kembali</button>
+                  <button type="button" class="btn btn-primary btn-rounded"><i class="fa fa-search" aria-hidden="true"></i>
+                    Cari</button>
+                  <button type="button" class="btn btn-primary btn-rounded"><i class="fa fa-reply" aria-hidden="true"></i>
+                    Kembali</button>
                 </div>
               </form>
-            </div>
-          </div>
-          <br>
-          <!--panel 1-->
-          <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">DAFTAR KARTU HASIL PENCARIAN</h5>
-          <div class="card">
-            <div class="card-body">
+              <hr>
+              <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">DAFTAR KARTU HASIL PENCARIAN</h5>
+
               <table class="table table-hover border">
                 <thead class="grey lighten-2">
                   <tr class="col-2 col-form-label" style="color: #2bbbad; font-weight: bold;">
@@ -54,7 +52,7 @@
                   </tr>
                 </thead>
                 <tr>
-                  <td class="font-weight-normal">123456789</td>
+                  <td class="font-weight-normal"><a [routerLink]="['/kartu/aktivasi']" routerLinkActive="router-link-active" >123456789</a></td>
                   <td class="font-weight-normal">AAAA</td>
                   <td class="font-weight-normal">Aktif</td>
                   <td class="font-weight-normal">Normal</td>
@@ -68,27 +66,26 @@
                   <td class="font-weight-normal">Tutup</td>
                 </tr>
               </table>
+              <!--Pagination-->
+              <div class="d-flex flex-row-reverse" style="margin-top: 15px;">
+                <nav aria-label="Page navigation example">
+                  <ul class="pagination pg-blue">
+                    <li class="page-item">
+                      <a class="page-link">
+                        <span>&laquo;&laquo; Sebelumnya</span>
+                      </a>
+                    </li>
+                    <li class="page-item">
+                      <a class="page-link">
+                        <span>Selanjutnya &raquo;&raquo;</span>
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+              <!--Pagination-->
             </div>
           </div>
-          <!--Pagination-->
-          <div class="d-flex flex-row-reverse" style="margin-top: 15px;">
-            <nav aria-label="Page navigation example">
-              <ul class="pagination pg-blue">
-                <li class="page-item">
-                  <a class="page-link">
-                    <span>&laquo;&laquo; Sebelumnya</span>
-                  </a>
-                </li>
-                <li class="page-item">
-                  <a class="page-link">
-                    <span>Selanjutnya &raquo;&raquo;</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <!--Pagination-->
-          <br>
 
         </div>
       </div>
