--- a/src/app/nasabah/pencarian-nasabah/komponen/data-umum-nasabah/data-umum-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/komponen/data-umum-nasabah/data-umum-nasabah.component.html
@@ -3,7 +3,10 @@
 <div class="form-group row">
   <label class="col-2 col-form-label font-weight-bold">Jenis Nasabah</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">Individual</label></div>
+  <div class="col-3">
+    <label class="col-form-label" *ngIf="!isEdit">Individual</label>
+    <input class="form-control" *ngIf="isEdit" value="Individual">
+  </div>
   <span class="col-1"></span>
   <label class="col-2 col-form-label font-weight-bold">Kode Nasabah</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
